# LookingGlassCoreSDK

./: .gitmodules  LICENSE  README.md
ExampleProject/: .gitignore  CMakeLists.txt  README.md
ExampleProject/shader/: blit.frag  blit.vert
ExampleProject/src/: HoloPlayContext.cpp  HoloPlayContext.hpp  SampleScene.cpp  SampleScene.hpp  Shader.cpp  Shader.hpp  glError.cpp  main.cpp
HoloPlayCore/dylib/Win32/: HoloPlayCore.exp  HoloPlayCore.lib
HoloPlayCore/dylib/Win64/: HoloPlayCore.exp  HoloPlayCore.lib
HoloPlayCore/dylib/macos/: libHoloPlayCore.dylib
HoloPlayCore/dylib/macos/HoloPlayCore.bundle/Contents/: Info.plist
HoloPlayCore/examples/: HoloPlayInfo.c  async.c  minimal.c  printshaders.c
HoloPlayCore/include/: HoloPlayCore.h  HoloPlayShaders.h  HoloPlayShadersOpen.h  libHoloPlayCore.h
